@@ -5501,3 +5501,7 @@ Sat Jun 17 23:06:03 2006                        Michael Jennings (mej)
 Daniel Macks <dmacks@netspace.org> noticed that gdb.scr wasn't being
 installed.  Oops.  Fixed now.
 ----------------------------------------------------------------------
+Fri Aug 18 13:41:14 2006                        Michael Jennings (mej)
+
+Addressed licensing concerns.
+----------------------------------------------------------------------
